k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: revent-task-api-deployment
  namespace: revent-task
spec:
  replicas: 2
  selector:
    matchLabels:
      app: revent-task-api
  template:
    metadata:
      labels:
        app: revent-task-api
    spec:
      containers:
      - name: revent-task-api
        image: reventtaskapiacr/revent-task-api:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
