k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: revent-task-api-service
  namespace: revent-task
spec:
  selector:
    app: revent-task-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
